Attemt to fix broken gradient on mobile

--- a/styles/Linktree.module.css
+++ b/styles/Linktree.module.css
@@ -42,7 +42,7 @@
   border: 0px inset #ffd60a;
 }
 .card:first-child {
-  background: radial-gradient(
+  background-image: radial-gradient(
     ellipse farthest-corner at var(--x) 0%,
     #e9e1ba 0%,
     #0aff1a 50%,
@@ -57,7 +57,7 @@
 }
 
 .card:last-child {
-  background: radial-gradient(
+  background-image: radial-gradient(
     ellipse farthest-corner at var(--x) 90%,
     #ffd60a 0%,
     #0aff1a 50%,
